--- a/src/components/link/index.module.css
+++ b/src/components/link/index.module.css
@@ -3,7 +3,7 @@
     text-decoration: none;
 }
 
-.listItem {
+.header-list-item {
     display: inline-block;
     height: auto;
     margin-right: 2%;
@@ -13,13 +13,13 @@
     vertical-align: top;
 }
 
-.listItem:not(:first-child) {
+.header-list-item:not(:first-child) {
     padding: 2%;
     margin-top: 1.5%;
     border-top: 2px solid #ffa000;
 }
 
-.listItem:hover {
+.header-list-item:hover {
     border-top: none;
     border-bottom: 2px solid #ffa000;
     font-weight: bold;
@@ -50,7 +50,7 @@ footer .listItem:hover {
 
 /* aside */
 
-aside .listItem {
+.aside-list-item {
     display: block;
     width: 98%;
     border-left: 2px solid #234465;
@@ -60,7 +60,7 @@ aside .listItem {
     text-align: center;
 }
 
-aside .listItem a {
+.aside-link {
     color: #234465;
     text-align: center;
     text-decoration: none;
@@ -69,7 +69,7 @@ aside .listItem a {
     display: block;
 }
 
-aside .listItem:hover {
+.aside-list-item:hover {
     border-left: none;
     border-right: none;
     font-weight: bold;
