--- a/src/components/page-layout/index.module.css
+++ b/src/components/page-layout/index.module.css
@@ -16,3 +16,12 @@
     /* border: 1px solid purple; */
     margin-bottom: 0.1%;
 }
+
+.inner-container {
+    display: inline-block;
+    width: 83%;
+    height: auto;
+    /* border:1px solid blue; */
+    margin-bottom: 5%;
+    margin-top: 15vh;
+}
